--- a/portada.qmd
+++ b/portada.qmd
@@ -133,7 +133,7 @@ La actividad de acuicultura en lagos se ha centrado en el cultivo de salmónidos
 
 # ANTECEDENTES
 
-De acuerdo al artículo 74º, inciso 3º, de la Ley General de Pesca y Acuicultura, sobre la mantención de la limpieza y del equilibrio ecológico de la zona concedida, y su artículo 87º, sobre reglamentar las medidas de protección del medio ambiente para que los establecimientos de acuicultura operen en niveles compatibles con las capacidades de los cuerpos de agua lacustres, fluviales y marítimos, el Reglamento Ambiental para la Acuicultura (RAMA) D.S. Nº320/2001 y su Resolución acompañante Nº3.612/2009 constituyen las herramientas ambientales que permiten regular estas actividades. Sin embargo, se requiere además evaluar, especialmente en el caso de los lagos, las capacidades de carga de estos cuerpos de agua, con la finalidad de verificar que la actividad opera en equilibrio con la condición ambiental del área.
+De acuerdo al artículo 74º, inciso 3º, de la Ley General de Pesca y Acuicultura, sobre la mantención de la limpieza y del equilibrio ecológico de la zona concedida, y su artículo 87º, sobre reglamentar las medidas de protección del medio ambiente para que los establecimientos de acuicultura operen en niveles compatibles con las capacidades de los cuerpos de agua lacustres, fluviales y marítimos, el Reglamento Ambiental para la Acuicultura (RAMA) D.S. Nº320/2001 y su Resolución acompañante Nº3.612/2009 constituyen las herramientas ambientales que permiten regular estas actividades. Sin embargo, se requiere además evaluar, especialmente en el caso de los lagos, las capacidades de carga de estos cuerpos de agua, con la finalidad de verificar que la actividad opera en equilibrio con la condición ambiental del área. x
 
 Con la finalidad de abordar la evaluación ambiental de los efectos de la acuicultura que se desarrolla en los lagos del país, la Subsecretaría de Pesca y Acuicultura, a través del Fondo de Investigación Pesquera y Acuicultura (FIPA) y, en los últimos años mediante el convenio de IFOP con la Subsecretaría de Economía y Empresas de Menor Tamaño, ha realizado estudios entre el 2012-2024 (primera a duodécima etapa). El presente estudio comprende la revisión y análisis de los datos obtenidos a través del estudio “Evaluación del estado ambiental de los lagos utilizados con actividades de acuicultura en la zona sur de Chile” desde el año 2012 al 2023, integrando los antecedentes con información obtenida desde otras fuentes.\
 La importancia de los sistemas acuáticos continentales es incuestionable. En el escenario del cambio climático, ya que se prevé una disminución en la calidad del agua, y un aumento en las oscilaciones de los regímenes pluviales. Las redes hídricas que conforman las cuencas lacustres, aportan con insustituibles servicios ecosistémicos y funcionan como amortiguadores de la variación térmica, proveen de agua para la producción de alimentos, agua potable y actividades recreativas. Las cuencas lacustres también permiten la conservación del patrimonio natural y cultural, son fuente de diversidad biológica y la producción de energía eléctrica. Por sus características de acumuladores del agua y sustancias transportadas a través de su cuenca, son buenos centinelas de cambios ambientales. Por lo anterior se deben buscar las herramientas necesarias para conservar los recursos hídricos, fundamentales para el desarrollo sostenible, socio ambiental y económico del país.
